@startuml

title <b>Model v1 (states)</b>
left to right direction
skinparam shadowing false

[*] --> ordered
ordered --> paid
paid --> invoiced
paid --> cancelled
invoiced --> cancelled
invoiced --> shipped
shipped --> returned
returned --> refunded
refunded --> [*]
shipped --> [*]
cancelled --> [*]
refunded --> [*]
@enduml
